        FOLDER_WTAR_REGEX, FILE_WTAR_REGEX, FOLDER_EXCLUDE_REGEX, FILE_EXCLUDE_REGEX.
    * Fixed some errors discovered by Landscape.io
    * New function PlatformSpecificHelperBase.unwtar_something for unwtarring a specific item not just the current directory.
        PlatformSpecificHelperBase.unwtar_current_folder is now implemented by calling PlatformSpecificHelperBase.unwtar_something(".")

    user visible changes, client:
    * check-checksum command was defined by mistake to require --out command line option. Now removed.
    * A hack to prevent unwtaring of the sync folder. Copy command might copy something to the top level of the sync folder.
        So sync folder is avoided by detecting the bookkeeping folder inside.
    * If LOCAL_SYNC_DIR is not known it is extracted from SYNC_BASE_URL only if SYNC_BASE_URL exists.
        Previously if SYNC_BASE_URL was not found an exception was raised. Help to create remove without needing URLs.
    * Fixed the unwtar for non-copied object so that only what's needed will be unwtarred, not the whole sync folder.

    user visible changes, admin:
    * depend command: added a message at the end so we know output was created OK.
    * stage2svn command: added check to prevent adding files or folder with character ','.
    * Improved the unwtar command. Added --in option to allow to specify a file or folder that is not the current directory.
    * Fixed the verify-index command to proparly handle Win/Mac/Common sources and to identify wtarred sources.
    * Added --credentials to verify-index to allow access to secure s3.

15/3/2015 0.10.0.4
    user visible changes, client:
    * Better, more meaningful progress messages.
    * GUIDs that have upper case characters are converted to lower case.
    * HAVE_INFO_MAP_PATH file is copied to the SITE_HAVE_INFO_MAP_PATH for possible usage by remove command.